# meta-rl-hackathon

./: .gitignore  .openenvignore  Dockerfile  README.md  client.py  inference.py  judge_simulation.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scratch_test.py  test_env.py
my_env/: README.md  __init__.py  baseline.py  client.py  inference.py  judge_simulation.py  models.py  openenv.yaml  pyproject.toml
my_env/server/: Dockerfile  app.py  environment.py  scenarios.py
server/: app.py  environment.py  requirements.txt  scenarios.py
